--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
+    <h1>Breaking News</h1>
+    <h2>The Earth Is Flat</h2>
     <div>
       <br />
-      <a href="about.html">About this app</a>
+      <a href="about.html">About this site</a>
     </div>
 
     <script src="script.js"></script>
