Updated About.html and script.js

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>about.hpnle</title>
   </head>
   <body>
-    <h6>aboot.hpml</h6>
+    <h1>aboot.hpml</h1>
+    <h3>This site is a compilation of very true facts.</h3>
   </body>
 </html>
