Updated All Pages

--- a/about.html
+++ b/about.html
@@ -8,5 +8,8 @@
   <body>
     <h1>aboot.hpml</h1>
     <h3>This site is a compilation of very true facts.</h3>
+    <form action="index.html">
+      <input type="submit" value="Home" />
+    </form>
   </body>
 </html>
