--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My App</title>
+    <title>RealFacts</title>
     <link rel="stylesheet" href="style.css" />
 
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <h1>Breaking News</h1>
-    <h2>The Earth Is Flat</h2>
-    <div>
-      <br />
-      <a href="about.html">About this site</a>
-    </div>
+    <h1>RealFacts</h1>
+    <form action="about.html">
+      <input type="submit" value="About" />
+    </form>
+    <div></div>
+    <h2>Breaking News</h2>
+    <h3>The Earth Is Flat</h3>
+    <div></div>
 
     <script src="script.js"></script>
     <script>
