--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1>RealFacts</h1>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1173924042959942"
+      crossorigin="anonymous"
+    ></script>
     <form action="about.html">
       <input type="submit" value="About" />
     </form>
