--- a/flatEarth.html
+++ b/flatEarth.html
@@ -99,9 +99,9 @@
             And for the ultimate proof, here’s NASA admitting that the Earth is
             flat.
           </h6>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-            >NASA admitting</a
-          >
+          <div id="link">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">NASA admitting</a>
+          </div>
           <img src="realImageOfEarth.jpg" />
           <h6>
             Real image of the turtle below the Flat Earth. Real hidden photo
