--- a/flatEarth.html
+++ b/flatEarth.html
@@ -73,7 +73,10 @@
             will push things outwards due to centrifugal force. For example, if
             you were to take a basketball, put water on it, and then spin it,
             the water will move outwards. This is the same force you feel when a
-            car moves in a circle. So if the Earth is spinning, it should exert
+            car moves in a circle.
+          </h5>
+          <h5>
+            So if the Earth is spinning, it should exert
             a force that causes things to accelerate outwards. Now here’s a
             question: do you feel the Earth spinning right now? Unless you’ve
             spun around yourself, you don’t. Since you don’t feel the Earth
@@ -86,7 +89,10 @@
             calculate the centrifugal force, we use F =mv²/r. The force of
             gravity is F=mg. So the net force would be F = mg-mv²/r = m(g —
             v²)/r. To calculate the centrifugal acceleration, we use a = v²/r =
-            (460m/s ^2)/(6,371,000m) = 0.033m/s² This means that the outward
+            (460m/s ^2)/(6,371,000m) = 0.033m/s² 
+          </h5>
+          <h5>
+            This means that the outward
             centrifugal acceleration of objects is 0.033m/s² The downward
             acceleration of objects due to gravity alone is 9.8m/s² This means
             that the total acceleration of an object is 9.8m/s² minus 0.033m/s²
@@ -99,8 +105,8 @@
             And for the ultimate proof, here’s NASA admitting that the Earth is
             flat.
           </h6>
-          <div id="link">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">NASA admitting</a>
+          <div>
+            <a id="link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">NASA admitting</a>
           </div>
           <img src="realImageOfEarth.jpg" />
           <h6>
