--- a/vaccine.html
+++ b/vaccine.html
@@ -70,18 +70,24 @@
             thoughts?
           </h2>
           <h6>
-            some covid vaccines mcontain exotic technology that, once injected
+            Some covid vaccines contain exotic technology that, once injected
             into the body, activates a self-assembly process to build a
             biocircuitry interface using elements from the victim's own blood.
             This sounds like science fiction, but we are living in a dystopian
             sci-fi world with biological weapons, magnetic nanoparticle
             magnetofection technology, Orwellian surveillance and all-out
             government propaganda to coerce everyone into taking a depopulation
-            spike protein injection. In addition, the Moderna company openly
+            spike protein injection. 
+          </h6>
+          <h6>
+            In addition, the Moderna company openly
             describes their vaccine injections as installing an "operating
             system," which by definition means a platform to receive additional
             commands or instructions for execution. How are those commands
-            received? From external electromagnetic waves? Dr. Peter McCullogh
+            received? From external electromagnetic waves?
+          </h6>
+          <h6>
+            Dr. Peter McCullogh
             has described vaccine-pushing doctors as being in a kind of
             mind-controlled trance. His exact words from a recent interview:
             What we have learned over time is that we could no longer
@@ -95,11 +101,13 @@
             think what they’ve done to people... There’s a video where he states
             this: It isn't a spell or a trance but rather a self-assembled,
             embedded biocircuit that has taken control over their neurology!
+          </h6>
+          <h6>
             Some vaccines are simple spike protein bioweapons injections, but
             other vaccines are designed to place people in a kind of "trance"
             where elements of their neurology are controlled through external
             signals and commands. Never forget this published research:
-            Superparamagnetic nanoparticle delivery of DNA vaccine. It explains:
+            Superparamagnetic nanoparticle delivery of DNA vaccine. 
             The efficiency of delivery of DNA vaccines is often relatively low
             compared to protein vaccines. The use of superparamagnetic iron
             oxide nanoparticles (SPIONs) to deliver genes via magnetofection
@@ -109,6 +117,8 @@
             Oxygen, both present in human blood: We describe the production of
             Fe3O4-based SPIONs with high magnetization values (70 emu/g) under
             15 kOe of the applied magnetic field at room temperature...
+          </h6>
+          <h6>
             Polyethylenimine was chosen to modify the surface of SPIONs to
             assist the delivery of plasmid DNA into mammalian cells due to the
             polymer's extensive buffering capacity through the "proton sponge"
