--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       <!-- end menu row -->
       <div class="row">
         <div class="col-sm-12" id="box">
+          <h1>Featured</h1>
+          <div id="homebox">
           <h1>Flat Is Fact</h1>
           <img id="earthphoto" src="earthphoto.jpg" />
           <form id="flatreadbutton" action="flatEarth.html">
             <input type="submit" value="Read Article" />
           </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12" id="box">
+          </div>
+          <div id="homebox">
           <h1>
             Do covid vaccines contain nanoparticles that self-assemble to build
             a biocircuitry "operating system" to control your moods and
@@ -82,6 +82,7 @@
             <input type="submit" value="Read Article" />
           </form>
           <img id="vaccineBrain" src="vaccineBrain.jpg" />
+          </div>
         </div>
       </div>
     </div>
