added titanic page

--- a/facts.html
+++ b/facts.html
@@ -48,6 +48,9 @@
                     <a class="dropdown-item" href="vaccine.html"
                       >Vaccine = Mind Control</a
                     >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
