--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div class="col-sm-12" id="menu">
-          <nav class="navbar navbar-expand-sm bg-info navbar-light">
+          <nav id="row" class="navbar navbar-expand-sm bg-info navbar-light">
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <span>
                 <a href="index.html">
@@ -48,6 +48,9 @@
                     <a class="dropdown-item" href="vaccine.html"
                       >Vaccine = Mind Control</a
                     >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
@@ -66,22 +69,29 @@
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
           <div id="homebox">
-          <h1>Flat Is Fact</h1>
-          <img id="earthphoto" src="earthphoto.jpg" />
-          <form id="flatreadbutton" action="flatEarth.html">
-            <input type="submit" value="Read Article" />
-          </form>
+            <h1>Flat Is Fact</h1>
+            <img id="earthphoto" src="earthphoto.jpg" />
+            <form id="flatreadbutton" action="flatEarth.html">
+              <input id="flatreadbutton" type="submit" value="Read Article" />
+            </form>
           </div>
           <div id="homebox">
-          <h1>
-            Do covid vaccines contain nanoparticles that self-assemble to build
-            a biocircuitry "operating system" to control your moods and
-            thoughts?
-          </h1>
-          <form action="vaccine.html">
-            <input type="submit" value="Read Article" />
-          </form>
-          <img id="vaccineBrain" src="vaccineBrain.jpg" />
+            <h1>
+              Do COVID Vaccines Contain Nanoparticles That Self-Assemble to
+              Build a Biocircuitry “Operating System” to Control Your Moods and
+              Thoughts?
+            </h1>
+            <form id="vaccinebutton" action="vaccine.html">
+              <input id="vaccinebutton" type="submit" value="Read Article" />
+            </form>
+            <img id="vaccineBrain" src="vaccineBrain.jpg" />
+          </div>
+          <div id="homebox">
+            <h1>Did the Titanic Really Ever Sink?</h1>
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+            <img id="titanicjpg" src="titanic.jpg" />
           </div>
         </div>
       </div>
