--- a/vaccine.html
+++ b/vaccine.html
@@ -48,6 +48,9 @@
                     <a class="dropdown-item" href="vaccine.html"
                       >Vaccine = Mind Control</a
                     >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
@@ -63,7 +66,7 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="box">
+        <div class="col-sm-12" id="vaccinebox">
           <h2>
             Do covid vaccines contain nanoparticles that self-assemble to build
             a biocircuitry "operating system" to control your moods and
@@ -77,20 +80,19 @@
             sci-fi world with biological weapons, magnetic nanoparticle
             magnetofection technology, Orwellian surveillance and all-out
             government propaganda to coerce everyone into taking a depopulation
-            spike protein injection. 
+            spike protein injection.
           </h6>
           <h6>
-            In addition, the Moderna company openly
-            describes their vaccine injections as installing an "operating
-            system," which by definition means a platform to receive additional
-            commands or instructions for execution. How are those commands
-            received? From external electromagnetic waves?
+            In addition, the Moderna company openly describes their vaccine
+            injections as installing an "operating system," which by definition
+            means a platform to receive additional commands or instructions for
+            execution. How are those commands received? From external
+            electromagnetic waves?
           </h6>
           <h6>
-            Dr. Peter McCullogh
-            has described vaccine-pushing doctors as being in a kind of
-            mind-controlled trance. His exact words from a recent interview:
-            What we have learned over time is that we could no longer
+            Dr. Peter McCullogh has described vaccine-pushing doctors as being
+            in a kind of mind-controlled trance. His exact words from a recent
+            interview: What we have learned over time is that we could no longer
             communicate with government agencies. We actually couldn’t
             communicate with our propagandized colleagues in major medical
             centers, all of which appear to be under a spell, almost as if
@@ -107,8 +109,8 @@
             other vaccines are designed to place people in a kind of "trance"
             where elements of their neurology are controlled through external
             signals and commands. Never forget this published research:
-            Superparamagnetic nanoparticle delivery of DNA vaccine. 
-            The efficiency of delivery of DNA vaccines is often relatively low
+            Superparamagnetic nanoparticle delivery of DNA vaccine. The
+            efficiency of delivery of DNA vaccines is often relatively low
             compared to protein vaccines. The use of superparamagnetic iron
             oxide nanoparticles (SPIONs) to deliver genes via magnetofection
             shows promise in improving the efficiency of gene delivery both in
