--- a/about.html
+++ b/about.html
@@ -1,15 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about.hpnle</title>
+    <title>RealFacts: Home</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>aboot.hpml</h1>
-    <h3>This site is a compilation of very true facts.</h3>
-    <form action="index.html">
-      <input type="submit" value="Home" />
-    </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4" id="logo"></div>
+      </div>
+      <!-- end logo row -->
+
+      <div class="row">
+        <div class="col-sm-12" id="menu">
+          <nav id="row" class="navbar navbar-expand-sm bg-info navbar-light">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <span>
+                <a href="index.html">
+                  <img id="logo" class="img-responsive" src="logo.png" />
+                </a>
+              </span>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbardrop"
+                    data-toggle="dropdown"
+                    >Featured</a
+                  >
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="flatEarth.html"
+                      >The Earth is Flat</a
+                    >
+                    <a class="dropdown-item" href="vaccine.html"
+                      >Vaccine = Mind Control</a
+                    >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank</a
+                    >
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="facts.html">Facts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <!-- end menu row -->
+      <div class="row">
+        <div class="col-sm-12" id="box">
+ 
+        </div>
+      </div>
+    </div>
+    <!-- end container div -->
   </body>
 </html>
