--- a/flatEarth.html
+++ b/flatEarth.html
@@ -3,10 +3,10 @@
   <head>
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="bootstrap.min.css"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-sm-12" id="flatbox">
           <h1>Flat Is Fact</h1>
-          <h2>The Earth is Flat</h2>
+          <h3>The Earth is Flat</h3>
           <h5>
             According to the globe model (which I point out to you is just a
             model), the Earth pulls things down and causes them to accelerate at
@@ -119,7 +119,7 @@
           <form
             action="https://medium.com/@thisscience1/a-mathematical-proof-for-flat-earth-18f5be91741d"
           >
-            <input type="submit" value="Citation" />
+            <input id="flatEarthCitation" type="submit" value="Citation" />
           </form>
         </div>
       </div>
