--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
                     >Featured</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html"
-                      >The Earth is Flat</a
-                    >
-                    <a class="dropdown-item" href="vaccine.html"
-                      >Vaccine = Mind Control</a
-                    >
-                    <a class="dropdown-item" href="titanic.html"
-                      >The Titanic Never Sank</a
-                    >
+                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
+                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
+                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
+                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
+                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
                   </div>
                 </li>
                 <li class="nav-item">
