--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <link rel="icon" href="logo.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -64,7 +65,6 @@
       <!-- end menu row -->
       <div class="row">
         <div class="col-sm-12" id="box">
- 
         </div>
       </div>
     </div>
