--- a/birds.html
+++ b/birds.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <link
+      rel="stylesheet"
+      href="bootstrap.min.css"
+    />
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <link rel="icon" href="logo.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>birds</h1>
-</body>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RealFacts: Birds</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4" id="logo"></div>
+      </div>
+      <!-- end logo row -->
+
+      <div class="row">
+        <div class="col-sm-12" id="menu">
+          <nav class="navbar navbar-expand-sm bg-info navbar-light">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <span>
+                <a href="index.html">
+                  <img id="logo" class="img-responsive" src="logo.png" />
+                </a>
+              </span>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbardrop"
+                    data-toggle="dropdown"
+                    >Featured</a
+                  >
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
+                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
+                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
+                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
+                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="facts.html">Facts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <!-- end menu row -->
+      <div class="row">
+        <div class="col-sm-12" id="birdbox">
+          <h2>
+            Are Birds Really Real?
+          </h2>
+          <h6>
+            birds arent real because birds
+          </h6>
+          <img id="BirdImg" src="birdTelescope.jpg" />
+        </div>
+      </div>
+    </div>
+    <!-- end container div -->
+  </body>
 </html>
