--- a/vaccine.html
+++ b/vaccine.html
@@ -71,68 +71,126 @@
             thoughts?
           </h2>
           <h6>
-            Some covid vaccines contain exotic technology that, once injected
-            into the body, activates a self-assembly process to build a
-            biocircuitry interface using elements from the victim's own blood.
-            This sounds like science fiction, but we are living in a dystopian
-            sci-fi world with biological weapons, magnetic nanoparticle
-            magnetofection technology, Orwellian surveillance and all-out
-            government propaganda to coerce everyone into taking a depopulation
-            spike protein injection.
-          </h6>
-          <h6>
-            In addition, the Moderna company openly describes their vaccine
-            injections as installing an "operating system," which by definition
-            means a platform to receive additional commands or instructions for
-            execution. How are those commands received? From external
-            electromagnetic waves?
-          </h6>
-          <h6>
-            Dr. Peter McCullogh has described vaccine-pushing doctors as being
-            in a kind of mind-controlled trance. His exact words from a recent
-            interview: What we have learned over time is that we could no longer
-            communicate with government agencies. We actually couldn’t
-            communicate with our propagandized colleagues in major medical
-            centers, all of which appear to be under a spell, almost as if
-            they’ve been hypnotized... Good doctors are doing unthinkable things
-            like injecting biologically active messenger RNA that produces this
-            pathogenic spike protein into pregnant women. I think when these
-            doctors wake up from their trance, they’re going to be shocked to
-            think what they’ve done to people... There’s a video where he states
-            this: It isn't a spell or a trance but rather a self-assembled,
-            embedded biocircuit that has taken control over their neurology!
-          </h6>
-          <h6>
-            Some vaccines are simple spike protein bioweapons injections, but
-            other vaccines are designed to place people in a kind of "trance"
-            where elements of their neurology are controlled through external
-            signals and commands. Never forget this published research:
-            Superparamagnetic nanoparticle delivery of DNA vaccine. The
-            efficiency of delivery of DNA vaccines is often relatively low
-            compared to protein vaccines. The use of superparamagnetic iron
-            oxide nanoparticles (SPIONs) to deliver genes via magnetofection
-            shows promise in improving the efficiency of gene delivery both in
-            vitro and in vivo. That same study reveals the only two elements
-            necessary to create "SPIONS" (magnetic nanoparticles) are Iron and
-            Oxygen, both present in human blood: We describe the production of
-            Fe3O4-based SPIONs with high magnetization values (70 emu/g) under
-            15 kOe of the applied magnetic field at room temperature...
-          </h6>
-          <h6>
-            Polyethylenimine was chosen to modify the surface of SPIONs to
-            assist the delivery of plasmid DNA into mammalian cells due to the
-            polymer's extensive buffering capacity through the "proton sponge"
-            effect. This is the same as a self-assembling nanotech biocircuitry
-            system, it hints at the existence of exotic technologies that are
-            exploring such approaches to controlling neurology via external
-            influences (such as electromagnetic fields). Such technology exists
-            and is being deployed right now, it explains the seeming "hypnosis"
-            or "trance" under which millions of people suffer as they continue
-            to demand more bioweapons injections into children and pregnant
-            women. Today's doctors are just brainwashed, gullible cowards who
-            care nothing if they harm or kill billions of people as long as they
-            don't lose their lucrative medical salaries. Will people ever wake
-            up from this trance and realize they've become vaccine murderers?
+            It is an historical irony that the most famous ship to ever sail was famous because it sank, but that was the case with the RMS Titanic. Then the world’s largest and most luxurious cruise liner, it hit an iceberg on its maiden voyage early on the morning of the 15th April 1912.
+
+Within three hours, it had sunk to the bottom of the ocean, killing 1500 of the ship’s 2224 passengers and crew.
+
+Titanic was one of three Olympic class ocean liners built at the Harland and Wolff shipyards in Belfast,  the other two being the RMS Britannic and the RMS Olympic.
+
+The Titanic’s sinking was reported in newspapers around the world
+The Titanic’s sinking was reported in newspapers around the world
+The Olympic was launched a year before the Titanic but seemed to share its more famous sister ship’s poor luck.
+
+Within months of its launch in 1911, it had had two serious collisions, the second with Royal Navy cruiser HMS Hawke off the coast of the Isle of Wight causing serious structural damage to the Olympic’s keel and steel beams.
+
+Some authors have suggested that the damage to the Olympic was more serious than admitted. In fact, it was virtually a write-off.
+
+Repairs would be ruinously expensive, running into millions of pounds. The already troubled White Star Line was facing a potential financial disaster.
+
+The Titanic’s sister ship the Olympic was virtually identical
+The Titanic’s sister ship the Olympic was virtually identical
+Could White Star and its owner JP Morgan have devised an audacious insurance scam to try and salvage their investment in the troubled Olympic line?
+
+The Olympic, the theory goes, would be swapped with the Titanic and sunk in a staged accident. The Titanic, now disguised as the Olympic, would then carry on in service.
+
+The two ships were essentially identical save for minor differences and were moored side by side in dry dock;  the swap would entail nothing more elaborate that swapping a few nameplates and plaques.
+
+The Titanic and the Olympic moored side by side in Belfast
+The Titanic and the Olympic moored side by side in Belfast
+Although not a new theory, Robin Gardiner popularised the insurance swap theory in his 1998 book ‘Titanic - The Ship That Never Sank?’
+
+Could it really have been the Olympic that sank in the Titanic’s place?
+
+Evidence for
+Portholes
+Proponents of the swap theory have pointed out disparities in the number of portholes on the ships. The Olympic had 16 and the Titanic had 14.
+
+Photographs taken of the Titanic in dry dock show it with 14 portholes. But by the time of its doomed maiden voyage it now had 16, just like the Olympic.
+
+Was this evidence that the ships had been swapped or just that they had added two extra portholes as part of aesthetic changes to the Titanic?
+
+During construction — top, Titanic had 14 portholes. By its maiden voyage — bottom, it had 16
+During construction — top, Titanic had 14 portholes. By its maiden voyage — bottom, it had 16
+Other evidence supports the switch ,  the windows on the Olympic were somewhat unevenly spaced, but more evenly spaced on the Titanic.
+
+Again, by the time of its maiden voyage, the Titanic had acquired unevenly spaced windows like the Olympic.
+
+List to port
+The damage to the Olympic after its collision with the Hawke lent it a noticeable and permanent 2˚ list to port. The undamaged Titanic had no such list.
+
+Lawrence Beesley reported the Titanic listed to port like the Olympic
+Lawrence Beesley reported the Titanic listed to port like the Olympic
+However, one second-class passenger who survived the sinking -  Lawrence Beesley, later reported the Titanic did, in fact, list to port, stating "the Titanic listed to port...It was plain she did so, for the sky-line and sea on the port side were visible most of the time and on the starboard only sky".
+
+Beesley, a science teacher, was considered a reliable observer, and would later write one of the first books about the Titanic disaster.
+
+Rumours amongst crew
+There was a nationwide coal strike during the launch of the Titanic, leading to thousands of firemen, boiler stokers and greasers short of work.
+
+Yet despite this the Titanic struggled to find crew, with many men refusing to work on the ship at any price.
+
+Rumours were circulating amongst the workers at Harland and Wolff that the ships had been swapped as part of an insurance scam, and Titanic was to be sunk.
+
+Did foreknowledge of the sinking of the Titanic frighten men off from wanting to work on the ship?
+
+Titanic during its construction at the Harland and Wolff shipyard, Belfast
+Titanic during its construction at the Harland and Wolff shipyard, Belfast
+Despite the immense fanfare and hype that surrounded the Titanic launch, it was only just over half full when it left Southampton on its doomed voyage.
+
+Did White Star want to minimise the number of passengers because it intended to scuttle the ship? Or had the rumours of the insurance scam spread outside of the shipyards?
+
+Several last minute cancellations from high profile passengers certainly suggest some kind of foreknowledge.
+
+Last minute cancellations
+Many of the richest and most prestigious names in early 20th-century society were booked onto the Titanic.
+
+JP Morgan  -  the international financier who owned the White Star’s parent company, was due to travel on the Titanic but cancelled his trip a few days before the departure, claiming illness.
+
+JP Morgan and other prominent figures cancelled at the last minute
+JP Morgan and other prominent figures cancelled at the last minute
+A New York Times reported discovered this to be a lie, Morgan was actually seen perfectly well with his mistress in France on the very day Titanic sunk.
+
+Industrialist Henry Clay Frick and his wife, banker Horace J. Harding and billionaire George Washington Vanderbilt - all connected to Morgan, were amongst several other prominent figures who cancelled at the last minute.
+
+Californian
+The SS Californian, also owned by JP Morgan, was a large passenger ship that was ultimately blamed for the loss of life on the Titanic.
+
+It behaved somewhat oddly around the time of the Titanic’s voyage.
+
+Carrying no passengers,  it steamed into the middle of the Atlantic, stopped and waited. It’s only cargo was 3000 woollen blankets and jumpers.
+
+
+What was the purpose behind this curious manoeuvre? Was the Californian intended to rescue the Titanic’s passengers after its deliberate sinking?
+
+Edith Russell, a survivor of the sinking, was adamant that Titanic officers assured her the Californian was on its way.
+
+Author Robin Gardiner suggests serious navigation errors lead to the Californian stopping in the wrong area, some 12 miles away from the Titanic.
+
+The lifeboats on the Titanic weren’t sufficient to save all the passengers
+The lifeboats on the Titanic weren’t sufficient to save all the passengers
+With the Californian unable to complete its rescue mission the Titanic was doomed, and some 1500 passengers and crew perished in one of the worst maritime disasters in modern history.
+
+The wreck
+The wreck of the Titanic was discovered by Robert Ballard in 1985. Some evidence from the wreck supports the switch theory.
+
+The stamp 401,  the ID number used for the Titanic at Harland and Wolff, can be seen on the Titanic’s propeller.
+
+However, some authors have suggested that the Titanic propeller was fitted to the Olympic during its repair following the collision with the Hawke.
+
+If true, this would be strong evidence that the vessel on the ocean floor was really the Olympic.
+
+The wreck of the Titanic was found by Robert Ballard in 1985
+The wreck of the Titanic was found by Robert Ballard in 1985
+What appear to be the letters M and P can also be seen on the side of the wreck. Could that be the remains of the ship's original etched nameplate -  ‘OLYMPIC’, covered over with the Titanic’s as part of the scam?
+
+The wreck appears to show some evidence of the grey paint used as an undercoat on the Olympic. The Titanic used black paint for its undercoat.
+
+Lack of media scrutiny
+Insurance scams and maritime fraud were common at the time of the Titanic’s sinking.
+
+Whilst it seems unlikely such a scam could be pulled off today, the lack of media coverage in 1912 makes it more credible.
+
+Only one film survives of the Titanic and the photo record is also scant. With the two ships extremely similar, it is argued that only the most eagle-eyed would ever have spotted the swap.
           </h6>
           <img id="teenVaccines" src="teenVaccines.jpg" />
         </div>
