--- a/titanic.html
+++ b/titanic.html
@@ -66,9 +66,7 @@
       <div class="row">
         <div class="col-sm-12" id="vaccinebox">
           <h2>
-            Do covid vaccines contain nanoparticles that self-assemble to build
-            a biocircuitry "operating system" to control your moods and
-            thoughts?
+            Did the Titanic Really Ever Sink?
           </h2>
           <h6>
             Proponents of the swap theory have pointed out disparities in the number of portholes on the ships. The Olympic had 16 and the Titanic had 14.
