added image to titanic.html

--- a/titanic.html
+++ b/titanic.html
@@ -128,7 +128,7 @@
             Whilst it seems unlikely such a scam could be pulled off today, the lack of media coverage in 1912 makes it more credible.
             Only one film survives of the Titanic and the photo record is also scant. With the two ships extremely similar, it is argued that only the most eagle-eyed would ever have spotted the swap.
           </h6>
-          <img id="teenVaccines" src="teenVaccines.jpg" />
+          <img id="titanicImg" src="https://shorthand-social.imgix.net/prod/story/jCPyIbzzPVc/media/aa324800ec5711e58172cfb1db5e8826/original.jpg?w=1500&h=1500&fit=clip&fm=jpg&q=75" />
         </div>  <!--end box column-->
       </div>  <!--end box row-->
     </div>  <!--end container div-->
