--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="icon" href="logo.png">
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1173924042959942"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,12 +45,24 @@
                     >Featured</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+                    <a class="dropdown-item" href="flatEarth.html"
+                      >The Earth is Flat!</a
+                    >
+                    <a class="dropdown-item" href="birds.html"
+                      >Birds Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank!</a
+                    >
+                    <a class="dropdown-item" href="bees.html"
+                      >Bees Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="vaccine.html"
+                      >Vaccine = Mind Control!</a
+                    >
+                    <a class="dropdown-item" href="math.html"
+                      >Math Isn't Real!</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
@@ -64,8 +78,7 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="box">
-        </div>
+        <div class="col-sm-12" id="box"></div>
       </div>
     </div>
     <!-- end container div -->
