--- a/animals.html
+++ b/animals.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Home</title>
+    <title>RealFacts: Vaccines</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -65,25 +65,14 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="box">
-          <h1>Flat Is Fact</h1>
-          <img id="earthphoto" src="earthphoto.jpg" />
-          <form id="flatreadbutton" action="flatEarth.html">
-            <input type="submit" value="Read Article" />
-          </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12" id="box">
-          <h1>
-            Do covid vaccines contain nanoparticles that self-assemble to build
-            a biocircuitry "operating system" to control your moods and
-            thoughts?
-          </h1>
-          <form action="vaccine.html">
-            <input type="submit" value="Read Article" />
-          </form>
-          <img id="vaccineBrain" src="vaccineBrain.jpg" />
+        <div class="col-sm-12" id="vaccinebox">
+          <h2>
+            Animals Are'nt Real!
+          </h2>
+          <h6>
+            Animals Are'nt real!
+          </h6>
+          <img id="bat" src="bat.png" />
         </div>
       </div>
     </div>
