--- a/flatEarth.html
+++ b/flatEarth.html
@@ -49,6 +49,7 @@
                     <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
                     <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
                     <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
                   </div>
                 </li>
                 <li class="nav-item">
