--- a/index.html
+++ b/index.html
@@ -45,24 +45,13 @@
                     >Featured</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html"
-                      >The Earth is Flat!</a
-                    >
-                    <a class="dropdown-item" href="birds.html"
-                      >Birds Arent Real!</a
-                    >
-                    <a class="dropdown-item" href="titanic.html"
-                      >The Titanic Never Sank!</a
-                    >
-                    <a class="dropdown-item" href="bees.html"
-                      >Bees Arent Real!</a
-                    >
-                    <a class="dropdown-item" href="vaccine.html"
-                      >Vaccine = Mind Control!</a
-                    >
-                    <a class="dropdown-item" href="math.html"
-                      >Math Isn't Real!</a
-                    >
+                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
+                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
+                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
+                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
+                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -105,6 +94,28 @@
             </form>
             <img id="titanicjpg" src="titanic.jpg" />
           </div>
+          <div id="homebox">
+            <h1>birds</h1>
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+            <img id="titanicjpg" src="birdfish.jpg" />
+          </div>
+          <div id="homebox">
+            <h1>bees</h1>
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+            <img id="titanicjpg" src="bee.jpg" />
+          </div>
+          <div id="homebox">
+            <h1>animals</h1>
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+            <img id="titanicjpg" src="bat.png" />
+          </div>
+
         </div>
       </div>
     </div>
